# GameWrapper

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleaner.sh
GameFiles/Shaders/: Shader.fragment  Shader.vertex
GameWrapper/: Game  Includes.hpp  Main.cpp  Main.hpp  NordicEngine  buildNumber.hpp
